--- a/Activity_IntentFilter/app/build.gradle
+++ b/Activity_IntentFilter/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    apply plugin: 'com.android.application'
+   // implementation "org.jetbrains.anko:anko-commons:1.1.0"
+   // implementation "org.jetbrains.anko:anko-design:1.1.0" // For SnackBars
 }
