--- a/Activity_IntentFilter/app/src/main/AndroidManifest.xml
+++ b/Activity_IntentFilter/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".intentFilter.SendMessageActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SENDTO" />
+                <action android:name="toan.net.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
